# jetyak_force_model

./: .gitignore  README.md
data_utils/: CMakeLists.txt  README.md  package.xml
data_utils/launch/: sync_data.launch
data_utils/msg/: hdg_wrapper_msg.msg
data_utils/scripts/: f  mission_reader.py  plot_data.py  record_wrapped_message.py  time_synchronizer.py
data_utils/scripts/data_prep/: clean_data.py
