<?xml version="1.0"?>
<package>
  <name>data_utils</name>
  <version>0.0.0</version>
  <description>Data processing package with all auxiliary functions nessesary</description>

  <license>MIT</license>
  <author email="nare@email.sc.edu">Nare Karapetyan</author>
  <maintainer email="nare@email.sc.edu">Nare Karapetyan</maintainer>

  add_message_files(
  	hdg_wrapper_msg.msg)
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
